--- a/education-common-conf/deploy/test/db.properties
+++ b/education-common-conf/deploy/test/db.properties
@@ -24,3 +24,8 @@ job.jdbc.url=jdbc\:mysql\://192.168.1.216\:3316/guwr?useUnicode\=true&characterE
 job.jdbc.username=developer
 job.jdbc.password=developer_eloandb
 
+## lms_renew JDBC set
+sy_lms.jdbc.url=jdbc\:mysql\://192.168.1.216\:3316/sy_lms?useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true
+sy_lms.jdbc.username=developer
+sy_lms.jdbc.password=developer_eloandb
+
