--- a/education-user-facade/pom.xml
+++ b/education-user-facade/pom.xml
@@ -12,5 +12,11 @@
 
     <artifactId>education-user-facade</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.siyuanren.education</groupId>
+            <artifactId>education-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
