--- a/education-common-conf/deploy/prod/config.properties
+++ b/education-common-conf/deploy/prod/config.properties
@@ -1,32 +1,7 @@
 # Environment Config Properties.
-env.defaultEncoding=UTF-8
+## Dubbo
+dubbo.registry.address=192.168.2.249:12181
 
-# JDBC Database Config Properties.
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@//192.168.1.300:1521/orcl
-jdbc.username=scott
-jdbc.password=tiger
-jdbc.minConnection=2
-jdbc.maxConnection=40
-jdbc.maxConnectionLife=1800000
-jdbc.maxActiveTime=300000
-jdbc.prototypeCount=1
-jdbc.testSql=SELECT 1 FROM DUAL
-
-# Dubbox Config Properties.
-# dubbox.registry.address=zookeeper://192.168.2.16:2181
-dubbox.registry.address=zookeeper://192.168.1.113:2181?backup=192.168.1.114:2181,192.168.1.115:2182
-dubbox.application=eloancn-system-provider
-dubbox.rest.server=tomcat
-dubbox.rest.port=8888
-dubbox.rest.contextpath=eloancn-system-provider
-dubbox.rest.threads=500
-dubbox.rest.accepts=500
-
-## MQ
-mq.brokerURL=failover\:(tcp\://192.168.4.101\:61616)?randomize\=false&initialReconnectDelay\=1000&maxReconnectDelay\=30000
-mq.userName=wusc
-mq.password=wusc.123
-mq.pool.maxConnections=20
-#queueName
-queueName.notify=edu.pay.notify.v1
+#Redis»º´æ·þÎñµØÖ·
+redis.host=192.168.3.142
+redis.port=6379
