--- a/education-parent/pom.xml
+++ b/education-parent/pom.xml
@@ -14,6 +14,7 @@
         <module>../education-common</module>
         <module>../education-user-facade</module>
         <module>../education-user</module>
+        <module>../education-api</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,7 +33,6 @@
         <hessian.version>4.0.7</hessian.version>
         <jetty.version>6.1.26</jetty.version>
         <validation.version>1.0.0.GA</validation.version>
-        <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
         <jcache.version>0.4</jcache.version>
         <ws.version>2.0</ws.version>
         <resteasy.version>3.0.7.Final</resteasy.version>
@@ -513,17 +513,6 @@
             <version>${validation.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jboss-logging</artifactId>
-                    <groupId>org.jboss.logging</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
             <version>${jcache.version}</version>
@@ -639,11 +628,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.28</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
         </dependency>
         <!-- activemq-->
         <dependency>
