--- a/education-common-conf/deploy/test/db.properties
+++ b/education-common-conf/deploy/test/db.properties
@@ -4,7 +4,11 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.pool.validationQuery=select current_timestamp()
 
 ## lms_renew JDBC set
-sy_lms.jdbc.url=jdbc\:mysql\://192.168.1.216\:3316/sy_lms?useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true
-sy_lms.jdbc.username=developer
-sy_lms.jdbc.password=developer_eloandb
+#sy_lms.jdbc.url=jdbc\:mysql\://192.168.1.216\:3316/sy_lms?useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true
+#sy_lms.jdbc.username=developer
+#sy_lms.jdbc.password=developer_eloandb
+
+sy_lms.jdbc.url=jdbc\:mysql\://192.168.42.1\:3306/sy_lms?useUnicode\=true&characterEncoding\=utf-8&allowMultiQueries\=true
+sy_lms.jdbc.username=sy_lms
+sy_lms.jdbc.password=sy_lms
 
