--- a/education-user/pom.xml
+++ b/education-user/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>education-parent</artifactId>
+        <artifactId>education-base</artifactId>
         <groupId>com.siyuanren.education</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../education-parent</relativePath>
+        <relativePath>../education-base</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>education-user</artifactId>
