--- a/education-common-conf/pom.xml
+++ b/education-common-conf/pom.xml
@@ -14,19 +14,11 @@
 
     <!-- 全局属性配置 -->
     <profiles>
-        <!-- 开发环境 -->
+        <!-- 集成开发测试 -->
         <profile>
-            <id>env</id>
+            <id>develop</id>
             <properties>
-                <env>env</env>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-        </profile>
-        <!-- 测试环境 -->
-        <profile>
-            <id>test</id>
-            <properties>
-                <env>test</env>
+                <env>develop</env>
                 <maven.test.skip>true</maven.test.skip>
             </properties>
             <!-- 设置默认环境 -->
@@ -34,14 +26,31 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
-        <!-- 生产环境 -->
+        <!-- 发布前测试 -->
         <profile>
-            <id>prod</id>
+            <id>release</id>
             <properties>
-                <env>prod</env>
+                <env>release</env>
                 <maven.test.skip>true</maven.test.skip>
             </properties>
         </profile>
+        <!-- 线上程序bug修复的运行环境 -->
+        <profile>
+            <id>hotfix</id>
+            <properties>
+                <env>hotfix</env>
+                <maven.test.skip>true</maven.test.skip>
+            </properties>
+        </profile>
+        <!-- 生产环境 -->
+        <profile>
+            <id>product</id>
+            <properties>
+                <env>product</env>
+                <maven.test.skip>true</maven.test.skip>
+            </properties>
+        </profile>
+
     </profiles>
     <build>
         <finalName>education-common-conf</finalName>
