--- a/education-base/pom.xml
+++ b/education-base/pom.xml
@@ -10,11 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
-        <module>../education-common-conf</module>
-        <module>../education-common</module>
-        <module>../education-user-facade</module>
-        <module>../education-user</module>
-        <module>../education-api</module>
+        <!--<module>../education-common-conf</module>-->
+        <!--<module>../education-common</module>-->
+        <!--<module>../education-user-facade</module>-->
+        <!--<module>../education-user</module>-->
+        <!--<module>../education-api</module>-->
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,6 +41,22 @@
         <spring.version>4.1.5.RELEASE</spring.version>
         <jodd.version>3.7</jodd.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>Team Nexus Repository</name>
+            <url>http://106.75.45.61:8081/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>nexus</id>
+            <name>Team Nexus Repository</name>
+            <url>http://106.75.45.61:8081/nexus/content/groups/public</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <dependencies>
         <dependency>
             <groupId>cglib</groupId>
@@ -737,5 +753,18 @@
             <version>2.2.3</version>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://106.75.45.61:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://106.75.45.61:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
