--- a/education-api/pom.xml
+++ b/education-api/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>com.siyuanren.education</groupId>
-            <artifactId>education-common-conf</artifactId>
+            <artifactId>education-config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
