--- a/education-config/pom.xml
+++ b/education-config/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>education-common-conf</artifactId>
+    <artifactId>education-config</artifactId>
 
     <!-- 全局属性配置 -->
     <profiles>
@@ -53,7 +53,7 @@
 
     </profiles>
     <build>
-        <finalName>education-common-conf</finalName>
+        <finalName>education-config</finalName>
         <resources>
             <!-- 先指定 src/main/resources下所有文件及文件夹为资源文件 -->
             <resource>
